# BisheMerge

./: .gitignore  CLAUDE.md  README.md  三章加数据.md  修改第二章的位置到第一章.md  加入了功能模块图.md  加入了第四章.md  大纲_claude_扩充.md  未修改多模态.md  本科毕业论文正文稿.md  论文扩充稿.md  论文扩充稿_第1章.md
LlmApp/: .gitignore  AGENTS.md  CLAUDE.md  MODEL_SETUP_GUIDE.md  check_onnx.py  export_bge_mnn.py  gradlew  gradlew.bat  local.properties  settings.gradle.kts  test_embedding_consistency.py
LlmApp/.claude/: settings.local.json
LlmApp/app/: build.gradle.kts  proguard-rules.pro
LlmApp/app/src/main/: AndroidManifest.xml
LlmApp/app/src/main/cpp/: CMakeLists.txt  llm_infer_jni.cpp
LlmApp/app/src/main/cpp/llm/: llm.hpp
LlmApp/app/src/main/java/com/llmapp/: LLMApplication.kt
LlmApp/app/src/main/java/com/llmapp/asr/: VoskSpeechRecognizer.kt
LlmApp/app/src/main/java/com/llmapp/benchmark/: BenchmarkHelper.kt  BenchmarkRunner.kt
LlmApp/app/src/main/java/com/llmapp/data/database/: AppDatabase.kt  ChatDao.kt  ChunkEntity.kt  (+5 more)
LlmApp/app/src/main/java/com/llmapp/jni/: InferenceCallback.kt  NativeLib.kt
LlmApp/app/src/main/java/com/llmapp/utils/: ImageFileUtils.kt  Logger.kt  MarkdownBuffer.kt  PermissionHelper.kt
LlmApp/app/src/main/res/layout/: fragment_settings.xml  item_model_setting.xml
LlmApp/app/src/main/res/mipmap-hdpi/: ic_launcher.xml  ic_launcher_round.xml
LlmApp/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
LlmApp/app/src/main/res/values-zh-rCN/: strings.xml
LlmApp/app/src/main/res/xml/: file_paths.xml
LlmApp/app/src/test/java/com/llmapp/utils/: MarkdownBufferTest.kt
(+32 files in other folders)
